force-app/main/default/objects/leaseworks__Ratio_Table__c/leaseworks__Ratio_Table__c.object-meta.xml
<CustomObject>
    <description>This container serves as a repository for the matrix table containing various rates and units. The matrix table will subsequently be utilized in MR calculation following its association with supplemental rent.</description>
    <label>Ratio/Matrix Table</label>
    <nameField>
        <label>Ratio / Matrix Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ratio/Matrix Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>