force-app/main/default/objects/leaseworks__Ratio_Table__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <description>Any additional comments or information that the user would like to capture for this Matrix table.</description>
    <inlineHelpText>Any additional comments or information that the user would like to capture for this Matrix table.</inlineHelpText>
    <label>Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>