force-app/main/default/objects/leaseworks__Ratio_Table__c/fields/leaseworks__NoOfInterpolationrecords__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NoOfInterpolationrecords__c</fullName>
    <description>To Count the number of child Record</description>
    <label>_NoOfInterpolationrecords</label>
    <summaryForeignKey>leaseworks__Derate_Adjustment__c.leaseworks__Ratio_Table__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>