force-app/main/default/objects/leaseworks__Ratio_Table__c/fields/leaseworks__Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Basis__c</fullName>
    <description>This field is used to specify whether the table is a Ratio or a Matrix type. Depending on the selection, the corresponding fields for the child record will be displayed for input.</description>
    <inlineHelpText>This field is used to specify whether the table is a Ratio or a Matrix type. Depending on the selection, the corresponding fields for the child record will be displayed for input.</inlineHelpText>
    <label>Rate Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight Hours</fullName>
            </value>
            <value>
                <fullName>Flight Cycles</fullName>
            </value>
            <value>
                <fullName>FH To FC Ratio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>