force-app/main/default/objects/leaseworks__Ratio_Table__c/validationRules/leaseworks__Update_Rate_Basis.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Update_Rate_Basis</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, leaseworks__NoOfInterpolationrecords__c &gt;0, ISCHANGED( leaseworks__Rate_Basis__c ) )</errorConditionFormula>
    <errorMessage>Rate Basis cannot be changed after child records have been created. To modify the Rate Basis, please delete the existing child records first.</errorMessage>
</ValidationRule>